--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -10,14 +10,15 @@
 
 a,
 .green {
+  color: hsla(160deg, 100%, 37%, 1);
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+
   transition: 0.4s;
 }
 
 @media (hover: hover) {
   a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+    background-color: hsla(160deg, 100%, 37%, 0.2);
   }
 }
 
@@ -30,6 +31,7 @@ a,
   #app {
     display: grid;
     grid-template-columns: 1fr 1fr;
+
     padding: 0 2rem;
   }
 }
