--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,12 @@
 @charset 'utf-8';
 
+@import "./1-abstracts/all";
 @import "./3-base/all";
+
+:root {
+  @each $name, $indices in $colors {
+    @each $index, $color in $indices {
+      --#{$name}-#{$index}: #{$color};
+    }
+  }
+}
