--- a/src/scss/1-abstracts/_color-vars.scss
+++ b/src/scss/1-abstracts/_color-vars.scss
@@ -2,7 +2,7 @@
 @use "sass:map";
 
 $colors: (
-  "gray": (
+  "grey": (
     "50": #f9fafb,
     "100": #f3f4f6,
     "200": #e5e7eb,
@@ -113,3 +113,7 @@ $colors-theme: (
   warning: color(yellow-400),
   info: color(blue-400),
 );
+
+@function theme-color($theme) {
+  @return map.get($colors-theme, $theme);
+}
