feat: Pill component

--- a/src/scss/1-abstracts/_variables.scss
+++ b/src/scss/1-abstracts/_variables.scss
@@ -1,5 +1,18 @@
+$font-size-base: 16px !default;
+
+$font-xxxl: 24px !default;
+$font-xxl: 20px !default;
+$font-xl: 18px !default;
+$font-lg: 16px !default;
+$font-md: 14px !default;
+$font-sm: 12px !default;
+$font-xs: 10px !default;
+
 $font-weight-normal: 400 !default;
 $font-weight-strong: 700 !default;
+
+$heading-font: "Helvetica", sans-serif;
+$body-font: "Arial", sans-serif;
 
 $border-radius-sm: 4px;
 $border-radius-md: 6px;
