--- a/src/scss/4-components/_select.scss
+++ b/src/scss/4-components/_select.scss
@@ -14,6 +14,8 @@
 
   &__placeholder {
     color: color(grey-400);
+
+    cursor: default;
   }
 
   &__input-container {
@@ -40,7 +42,7 @@
     align-items: center;
 
     min-height: 26px;
-    margin: 4px 0 4px 10px;
+    padding: 4px 0 4px 10px;
 
     color: color(grey-900);
 
@@ -58,7 +60,9 @@
 
     width: 100%;
     min-height: 26px;
-    margin: 4px 0 4px 10px;
+    padding: 4px 0 4px 10px;
+
+    cursor: default;
 
     &:empty {
       display: none;
@@ -81,60 +85,16 @@
     }
   }
 
+  &__options {
+    position: absolute;
+  }
+
   &--open {
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
 
     .cc-select__toggle svg {
       transform: rotate(180deg);
-    }
-  }
-}
-
-%cc-option-item {
-  padding: 0 8px;
-
-  line-height: 2;
-}
-
-.cc-option {
-  position: absolute;
-
-  padding: 4px 0;
-
-  border: 1px solid black;
-  border-radius: 0 0 $border-radius-sm $border-radius-sm;
-
-  background-color: #fff;
-
-  outline: 0;
-
-  &:focus-visible {
-    outline: 1px auto color(blue-700);
-  }
-
-  &__empty {
-    @extend %cc-option-item;
-    color: color(grey-400);
-
-    cursor: default;
-  }
-
-  &__item {
-    @extend %cc-option-item;
-  }
-
-  &--selected {
-    color: #fff;
-
-    background-color: color(blue-400);
-  }
-
-  &--highlighted {
-    background-color: color(blue-200);
-
-    &.cc-option--selected {
-      background-color: color(blue-600);
     }
   }
 }
