feat: Amend color CSS variables

--- a/src/scss/3-base/_colors.scss
+++ b/src/scss/3-base/_colors.scss
@@ -4,4 +4,8 @@
       --#{$name}-#{$index}: #{$color};
     }
   }
+
+  @each $name, $color in $colors-theme {
+    --#{$name}-color: #{$color};
+  }
 }
