refactor: Avatar SCSS made global

--- a/src/scss/4-components/_all.scss
+++ b/src/scss/4-components/_all.scss
@@ -1,14 +1,15 @@
+@import "./accordion";
+@import "./alert";
+@import "./avatar";
 @import "./button";
+@import "./checkbox";
+@import "./dropdown";
 @import "./field";
 @import "./icon";
 @import "./input";
-@import "./radio";
-@import "./checkbox";
-@import "./pill";
-@import "./tab";
-@import "./accordion";
-@import "./select";
 @import "./list";
+@import "./pill";
+@import "./radio";
+@import "./tab";
+@import "./select";
 @import "./tooltip";
-@import "./dropdown";
-@import "./alert";
