fix: SCSS variable declaration

--- a/src/scss/1-abstracts/_variables.scss
+++ b/src/scss/1-abstracts/_variables.scss
@@ -17,3 +17,5 @@ $body-font: "Arial", sans-serif;
 $border-radius-sm: 4px;
 $border-radius-md: 6px;
 $border-radius-lg: 8px;
+
+$border-color: color(grey-400);
