--- a/src/scss/4-components/_all.scss
+++ b/src/scss/4-components/_all.scss
@@ -8,6 +8,7 @@
 @import "./icon";
 @import "./input";
 @import "./list";
+@import "./nav-menu";
 @import "./number-input";
 @import "./pill";
 @import "./radio";
