--- a/src/scss/1-abstracts/_all.scss
+++ b/src/scss/1-abstracts/_all.scss
@@ -1,4 +1,5 @@
-@import "./variables";
 @import "./color-vars";
+@import "./variables";
 @import "./functions";
+@import "./mixins";
 @import "./animation";
