--- a/src/scss/3-base/_base.scss
+++ b/src/scss/3-base/_base.scss
@@ -13,6 +13,10 @@ body {
   font-size: $font-md;
   font-family: $body-font;
   line-height: 1.5;
+
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 strong {
