refactor: Move existing pages into new layout

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,14 +1,14 @@
-@import "./base.css";
+/* @import "./base.css"; */
 
-#app {
+/* #app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
 
   font-weight: normal;
-}
+} */
 
-a,
+/* a,
 .green {
   color: hsla(160deg, 100%, 37%, 1);
   text-decoration: none;
@@ -34,4 +34,4 @@ a,
 
     padding: 0 2rem;
   }
-}
+} */
