feat: Add row component

--- a/src/scss/4-components/_all.scss
+++ b/src/scss/4-components/_all.scss
@@ -12,6 +12,7 @@
 @import "./number-input";
 @import "./pill";
 @import "./radio";
+@import "./row";
 @import "./tab";
 @import "./select";
 @import "./tooltip";
