fix: overlay when menu is opened

--- a/src/scss/5-layout/_default-layout.scss
+++ b/src/scss/5-layout/_default-layout.scss
@@ -18,6 +18,8 @@
   &__header {
     grid-area: header;
 
+    z-index: 20;
+
     color: #fff;
 
     background-color: color(purple-900);
@@ -143,7 +145,7 @@ $duration: 0.1s;
 }
 
 .menu-overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
